# Aura

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aura/: __init__.py  main.py
aura.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aura/agents/: data_architect.py  planner.py  verifier.py
aura/core/: agent_base.py  budget.py  bus.py  config.py  memory.py  telemetry.py
aura/distributed/: ray_runner.py
aura/models/: embeddings.py  optimizer.py
aura/pipelines/: executor.py  fault_injection.py  mpp_engine.py  mpp_simulator.py  rag.py
aura/security/: rbac.py
benchmarks/: e2e_bench.py  latency_bench.py  throughput_bench.py
config/: prometheus.yml  rbac_policies.yaml  settings.yaml
grafana/: dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
terraform/: cloudwatch.tf  iam.tf  main.tf  outputs.tf  variables.tf
tests/: test_agents.py  test_bus.py  test_e2e.py  test_hardening.py  test_metrics.py  test_mpp_engine.py  test_pii_redact.py  test_rag.py  test_verifier.py
verifier/: constraints.py  engine.py  grounding.py  guardrails.py  pii_redactor.py
