[project]
name = "aura"
version = "0.1.0"
description = "Autonomous Multi-Agent MPP Orchestrator for petabyte-scale enterprise data environments"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Deepesh Kumar Jha"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "litellm>=1.30.0",
    "ray[default]>=2.9.0",
    "pymilvus>=2.3.0",
    "sqlalchemy>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "prometheus-client>=0.20.0",
    "torch>=2.1.0",
    "protobuf>=4.25.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "duckdb",
    "sqlglot",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["aura*", "verifier*"]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
